--- a/config.conf
+++ b/config.conf
@@ -15,7 +15,7 @@ app_secret=6a6aee8d6a5262dfc587613e649df246
 #消息模板ID，在微信测试号中添加模板会自动生成ID
 template_id=-ry6RId1Zm6Upe-f4ybutBZ9MMVVv-vzAh4lBryl2GQ
 #接收消息的用户ID，让你的女朋友扫微信测试号的二维码，获取微信用户ID
-user_id=oI4D15mGwPUfpyl-bLJZ4dQbaIdY
+user_id=oI4D15mGwPUfpyl-bLJZ4dQbaIdY，oI4D15ns606Qc9EscNCdlr2zGLNg
 #如有多个女朋友或者女朋友有多个微信，请使用以下格式,","隔开
 #user_id=****,***,*****
 
